--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "standard": "^8.3.0"
   },
   "standard": {
-    "globals": [],
+    "globals": [
+      "WebSocket"
+    ],
     "ignore": [
       "example/node_modules/**",
       "example/web/**",
