--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,7 @@
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-preset-latest": "^6.16.0",
+    "overpass-sdk": "file:../ext/overpass-sdk",
     "overpass-websocket-client": "file:..",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
