--- a/ext/overpass-websocket-client-sdk/package.json
+++ b/ext/overpass-websocket-client-sdk/package.json
@@ -4,8 +4,5 @@
   "description": "Client SDK for Overpass websocket communication.",
   "repository": "icecave/overpass-websocket-client-sdk",
   "license": "MIT",
-  "main": "src/index",
-  "dependencies": {
-    "overpass-websocket-client": "file:../.."
-  }
+  "main": "src/index"
 }
