--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
