--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.16.3",
     "file-loader": "^0.9.0",
-    "grommet": "^0.6.12",
+    "grommet": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^3.10.1",
-    "overpass-websocket-client": "file:..",
-    "overpass-websocket-client-sdk": "file:../ext/overpass-websocket-client-sdk",
+    "overpass-websocket": "file:..",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
