--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
     "grommet": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^3.10.1",
-    "overpass-websocket": "file:..",
+    "overpass-websocket": "ezzatron/overpass-websocket#master",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
