--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.16.3",
+    "cbor-js": "^0.1.0",
     "file-loader": "^0.9.0",
     "grommet": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
