--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-istanbul": "^2.0.1",
     "babel-preset-latest": "^6.16.0",
     "babel-register": "^6.16.3",
+    "cbor-js": "^0.1.0",
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
     "nyc": "^8.3.1",
