--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "cbor-js": "^0.1.0",
     "chai": "^3.5.0",
+    "eslint": "^3.8.1",
     "mocha": "^3.1.2",
     "nyc": "^8.3.1",
     "sinon": "^1.17.6",
