--- a/example/client/package.json
+++ b/example/client/package.json
@@ -8,23 +8,24 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.16.3",
     "cbor-js": "^0.1.0",
-    "file-loader": "^0.9.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "grommet": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.5.0",
     "overpass-websocket": "ezzatron/overpass-websocket#master",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
-    "redux-saga": "^0.12.0",
-    "sass-loader": "^4.0.2",
-    "webpack": "^1.13.2"
+    "redux-saga": "^0.14.3",
+    "sass-loader": "^5.0.0",
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
     "webpack-bundle-size-analyzer": "^2.2.0",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^2.3.0"
   }
 }
