Work on updating the example client.

--- a/example/client/package.json
+++ b/example/client/package.json
@@ -7,20 +7,25 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.16.3",
+    "bluebird": "^3.4.7",
     "cbor-js": "^0.1.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "grommet": "^1.0.0",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.0",
     "overpass-websocket": "ezzatron/overpass-websocket#master",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-helmet": "^4.0.0",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-immutable": "^3.0.11",
     "redux-logger": "^2.7.0",
-    "redux-saga": "^0.14.3",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^5.0.0",
     "webpack": "^2.2.1"
   },
