Renamed Overpass to Rinq in all example code. Example server currently broken.

--- a/example/client/Makefile
+++ b/example/client/Makefile
@@ -1,13 +1,18 @@
+.PHONY: build
 build: node_modules
 	node_modules/.bin/webpack --debug
 
+.PHONY: serve
 serve: build
 	node_modules/.bin/webpack-dev-server --host 0.0.0.0
 
+.PHONY: open
 open:
 	open http://localhost:8080/
 
-.PHONY: build serve open
-
-node_modules:
+node_modules: yarn.lock
 	yarn install
+	@touch $@
+
+yarn.lock: package.json
+	yarn upgrade
