--- a/example/server/Makefile
+++ b/example/server/Makefile
@@ -1,10 +1,10 @@
-lint: node_modules
-	node_modules/.bin/standard --fix '**/*.js'
-
+.PHONY: serve
 serve: node_modules
 	PORT=8081 node --harmony --require babel-register src/app
 
-.PHONY: lint serve
-
-node_modules:
+node_modules: yarn.lock
 	yarn install
+	@touch $@
+
+yarn.lock: package.json
+	yarn upgrade
