--- a/example/client/package.json
+++ b/example/client/package.json
@@ -15,7 +15,6 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.0",
-    "overpass-websocket": "ezzatron/overpass-websocket#master",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-helmet": "^4.0.0",
@@ -26,6 +25,7 @@
     "redux-immutable": "^3.0.11",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.2.0",
+    "rinq-websocket": "rinq/websocket#master",
     "sass-loader": "^6.0.2",
     "webpack": "^2.2.1"
   },
