--- a/example/server/package.json
+++ b/example/server/package.json
@@ -4,15 +4,14 @@
     "babel-preset-latest-minimal": "^1.1.2",
     "babel-register": "^6.16.3",
     "cbor-js": "^0.1.0",
-    "overpass-websocket": "ezzatron/overpass-websocket#master",
+    "rinq-websocket": "rinq/websocket#master",
     "text-encoding": "^0.6.1",
     "ua-parser-js": "^0.7.12",
     "winston": "^2.2.0",
     "ws": "^2.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^7.0.0",
-    "standard": "^8.3.0"
+    "babel-eslint": "^7.0.0"
   },
   "standard": {
     "parser": "babel-eslint"
