--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 cache: yarn
 script: make ci
 after_success: bash <(curl -s https://codecov.io/bash)
+before_deploy: yarn version --no-git-tag-version --new-version "$TRAVIS_TAG"
 deploy:
   provider: npm
   on:
